--- a/Trip/Base.lproj/Main.storyboard
+++ b/Trip/Base.lproj/Main.storyboard
@@ -3853,7 +3853,7 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3Vd-uZ-wmM" customClass="CosmosView" customModule="Cosmos">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Vd-uZ-wmM" customClass="CosmosView" customModule="Cosmos">
                                                         <rect key="frame" x="109.5" y="75.5" width="195" height="35"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                         <userDefinedRuntimeAttributes>
@@ -7015,11 +7015,37 @@
         <!--Requests-->
         <scene sceneID="dWT-kQ-eqP">
             <objects>
-                <viewController id="SE2-8T-DV5" sceneMemberID="viewController">
+                <viewController id="SE2-8T-DV5" customClass="RegisterViewController" customModule="Trip" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ent-NA-PDd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tdI-IV-wMd">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RequestCellTableViewCell" rowHeight="146" id="flV-pL-aFF" customClass="RequestCellTableViewCell" customModule="Trip" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="146"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="flV-pL-aFF" id="gpL-ma-nhX">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="146"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="SE2-8T-DV5" id="Mdc-ln-rFe"/>
+                                    <outlet property="delegate" destination="SE2-8T-DV5" id="gZw-1r-tyX"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="tdI-IV-wMd" firstAttribute="leading" secondItem="ihu-O4-Rit" secondAttribute="leading" id="4JO-zz-0dj"/>
+                            <constraint firstItem="tdI-IV-wMd" firstAttribute="top" secondItem="ihu-O4-Rit" secondAttribute="top" id="9Tv-lG-RHH"/>
+                            <constraint firstItem="ihu-O4-Rit" firstAttribute="bottom" secondItem="tdI-IV-wMd" secondAttribute="bottom" id="S4F-LX-LsB"/>
+                            <constraint firstItem="ihu-O4-Rit" firstAttribute="trailing" secondItem="tdI-IV-wMd" secondAttribute="trailing" id="tjx-ae-O2D"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ihu-O4-Rit"/>
                     </view>
                     <navigationItem key="navigationItem" title="Requests" id="Wx5-x4-KVT">
@@ -7030,7 +7056,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BAO-tS-4dW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="551" y="4859"/>
+            <point key="canvasLocation" x="550.72463768115949" y="4858.9285714285716"/>
         </scene>
         <!--Contact Us-->
         <scene sceneID="8Su-kL-lou">
