--- a/Trip/Base.lproj/Main.storyboard
+++ b/Trip/Base.lproj/Main.storyboard
@@ -1275,7 +1275,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="edO-Gg-BKA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6186.9565217391309" y="3706.4732142857142"/>
+            <point key="canvasLocation" x="7097.1014492753629" y="3706.4732142857142"/>
         </scene>
         <!--Car Details View Controller-->
         <scene sceneID="FsH-ci-pNZ">
@@ -1663,7 +1663,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EYd-j2-yyD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7224.6376811594209" y="3785.4910714285711"/>
+            <point key="canvasLocation" x="8134.7826086956529" y="3785.4910714285711"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="XnZ-P0-Lly">
@@ -1723,6 +1723,26 @@
             </objects>
             <point key="canvasLocation" x="10864" y="6275"/>
         </scene>
+        <!--Settings-->
+        <scene sceneID="zh7-By-GTq">
+            <objects>
+                <viewController storyboardIdentifier="Settings" id="m3F-e3-ifq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EiI-2V-SLf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="XdO-re-O2H"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Settings" id="17U-am-e20">
+                        <barButtonItem key="rightBarButtonItem" image="menu" id="jW1-q5-LDk">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h93-lz-8NT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1380" y="4859"/>
+        </scene>
         <!--Profile-->
         <scene sceneID="9yX-HN-KWF">
             <objects>
@@ -1752,7 +1772,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="384" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L6n-2x-oMT">
-                                                <rect key="frame" x="0.0" y="8" width="129" height="24"/>
+                                                <rect key="frame" x="0.0" y="-2" width="151" height="44"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="   Edit Profile" image="editYellow">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1784,7 +1804,7 @@
                                         <rect key="frame" x="0.0" y="60" width="384" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cBQ-h5-ge3">
-                                                <rect key="frame" x="0.0" y="8" width="169" height="24"/>
+                                                <rect key="frame" x="0.0" y="-2" width="191" height="44"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="   Edit Car Details" image="carYellow">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1815,7 +1835,7 @@
                                         <rect key="frame" x="0.0" y="120" width="384" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KKu-yS-vee">
-                                                <rect key="frame" x="0.0" y="8" width="148" height="24"/>
+                                                <rect key="frame" x="0.0" y="-2" width="170" height="44"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="   Reservations" image="steetYellow">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1845,7 +1865,7 @@
                                         <rect key="frame" x="0.0" y="180" width="384" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vq4-An-FJ5">
-                                                <rect key="frame" x="0.0" y="6" width="113" height="28.5"/>
+                                                <rect key="frame" x="0.0" y="-8.5" width="141" height="57"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="   SignOut" image="Sign Out">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -2249,7 +2269,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cHe-MM-cPY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2584.057971014493" y="4312.5"/>
+            <point key="canvasLocation" x="3494.202898550725" y="4312.5"/>
         </scene>
         <!--Edit Car Details-->
         <scene sceneID="Lzf-vs-GuZ">
@@ -3023,7 +3043,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VZU-5R-6rT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5978.2608695652179" y="4782.5892857142853"/>
+            <point key="canvasLocation" x="6888.4057971014499" y="4782.5892857142853"/>
         </scene>
         <!--Tab Bar View Controller-->
         <scene sceneID="jFw-MC-TSx">
@@ -3547,7 +3567,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uoi-7h-6Mw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8441" y="3749"/>
+            <point key="canvasLocation" x="9350.7246376811599" y="3748.6607142857142"/>
         </scene>
         <!--Reservations Details-->
         <scene sceneID="Q2C-4o-ePb">
@@ -3966,7 +3986,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XGW-IM-34W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="12078.260869565218" y="4679.4642857142853"/>
+            <point key="canvasLocation" x="12988.40579710145" y="4679.4642857142853"/>
         </scene>
         <!--Reservations Details-->
         <scene sceneID="Xsk-Kd-SMp">
@@ -4372,7 +4392,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z8n-ek-Qzu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="12852.17391304348" y="4645.3125"/>
+            <point key="canvasLocation" x="13762.318840579712" y="4645.3125"/>
         </scene>
         <!--Invite Friend View Controller-->
         <scene sceneID="FD0-RQ-72r">
@@ -4481,7 +4501,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iIg-YT-QCw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8917.391304347826" y="4865.625"/>
+            <point key="canvasLocation" x="9826.0869565217399" y="4865.625"/>
         </scene>
         <!--Invite a Friend-->
         <scene sceneID="rsC-em-P9R">
@@ -5460,7 +5480,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dQ2-Tn-heU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8036.2318840579719" y="4482.5892857142853"/>
+            <point key="canvasLocation" x="8946.3768115942039" y="4482.5892857142853"/>
         </scene>
         <!--Add Your Car-->
         <scene sceneID="WeB-Pk-KXv">
@@ -6201,7 +6221,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dr0-4v-PuY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9823.188405797102" y="5035.7142857142853"/>
+            <point key="canvasLocation" x="10733.333333333334" y="5035.7142857142853"/>
         </scene>
         <!--Reserve-->
         <scene sceneID="eYP-1U-adY">
@@ -6884,7 +6904,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8kO-as-gHN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="10862.318840579712" y="4585.7142857142853"/>
+            <point key="canvasLocation" x="11772.463768115944" y="4585.7142857142853"/>
         </scene>
         <!--Convention -->
         <scene sceneID="gbL-03-WQ0">
@@ -7630,6 +7650,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B5y-yB-izz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="551" y="4187"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Nsr-yb-tln">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZV3-i7-szs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tv7-tg-m4C">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" name="TripColor"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="m3F-e3-ifq" kind="relationship" relationship="rootViewController" id="fDG-7d-4My"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RnU-zQ-z8R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1380" y="4187"/>
         </scene>
     </scenes>
     <resources>
